<resources>
    <string name="app_name">LavenderLang</string>
    <string name="new_language">Новый язык</string>
    <string name="name">Name</string>
    <string name="description">Описание</string>
    <string name="p">P</string>
    <string name="i">I</string>
    <string name="dictionary">Словарь</string>
    <string name="writing">Написание</string>
    <string name="punctuation">Пунктуация</string>
    <string name="grammar">Грамматика</string>
    <string name="word_formation">Словообразование</string>
    <string name="russian_vowels">а е ё и о у ы э ю я</string>
    <string name="russian_consonants">б в г д ж з й к л м н п р с т ф х ц ч ш щ</string>
    <string name="developers">Создатели:\n\n
        Арисова Елизавета @arisovaliza\n
        Макаревич Мария @programmerowl\n\n
        Студентки НИУ ВШЭ, направление "Программная инженерия", 2 курс</string>
    <string name="Head1">LavenderLang</string>
    <string name="Block1">
        LavenderLang — приложение, созданное, чтобы облегчить создание конлангов, то есть искусственных языков.
        Оно позволяет поэтапно конструировать различные части Вашего конланга и предоставляет информацию о разделах лингвистики,
        которые им соответствуют, а также осуществлять перевод между конлангом и русским языком.\n
        Данная страница содержит описание каждого раздела и специфики работы с ним.\n
        Переход на эту вкладку информации возможен с любой другой страницы приложения, так что,
        если у Вас возникнут вопросы, просто нажмите на кнопку в правом верхнем углу экрана. Удачи в создании языков!
    </string>
    <string name="Head2">Как работать с языком</string>
    <string name="Block2">
        У каждого языка есть 5 разделов: Написание, Пунктуация, Словарь, Грамматика и Словообразование.
        В Написании хранятся гласные и согласные Вашего языка, а также части речи, которые пишутся с заглавной буквы,
        в Пунктуации — соответствие знаков пунктуации в Вашем конланге и русском языке,
        в Словаре — все слова конланга, в Грамматике — варианты признаков (например, роды, падежи и т.д.) и грамматические правила,
        в Словообразовании — правила словообразования.
        Более подробное описание каждого раздела можно найти ниже.
        На большинстве страниц есть кнопка “Сохранить”, без ее нажатия Ваши изменения не сохранятся, так что будьте внимательны!
    </string>
    <string name="Head3">Создание языка</string>
    <string name="Block3">
        При создании нового языка часть полей (согласные и гласные в Написании, знаки пунктуации в Пунктуации,
        варианты признаков в Грамматике) задаются автоматически и соответствуют русскому языку,
        однако Вы в любой момент можете их изменить. Другие же части (грамматические правила в Грамматике,
        все Словообразование и Словарь) не содержат никакой информации и требуют заполнения вручную.\n
        Вы также можете восстановить уже готовый язык из json-файла, информацию об этом можно найти ниже.
    </string>
    <string name="Head4">Написание</string>
    <string name="Block4">
        В разделе “Написание” Вы можете выбрать гласные и согласные буквы, присутствующие в Вашем языке.
        Выбирать можно не только из русских и английских букв, но и из прочих символов, кроме пробела.
        Ради Вашего удобства между символами можно ставить пробелы, они не будут учитываться в обновлении алфавита.
        Все буквы в алфавите хранятся в нижнем регистре, и подразумевается, что, если строчная буква есть в алфавите,
        то соответствующая ей заглавная буква также там присутствует. Вы можете добавлять заглавные буквы в алфавит,
        однако они автоматически преобразуются в строчные./n
        Заметим: гласные и согласные не должны совпадать между собой,
        а также не должны встречаться среди знаков препинания конланга (например, если Вы поставили в
        соответствие русскому знаку препинания “!” слово “MEOW”, добавить букву “m” в согласные не выйдет).
        При совпадении гласных, согласных и знаков пунктуации новая информация не будет сохранена,
        а Вы увидите сообщение об ошибке.\n
        Кроме того, в этом разделе можно выбрать части речи, которые всегда будут писаться с заглавной буквы
        (как, например, существительные в немецком языке).\n
        Не забывайте нажимать кнопку “Сохранить” для обновления информации о языке!
    </string>
    <string name="Head5">Пунктуация</string>
    <string name="Block5">
        В разделе “Пунктуация” Вы можете создать уникальные для Вашего конланга знаки препинания и
        поставить их в соответствие русским знакам препинания.\n
        Заметим: знаки препинания не должны встречаться среди алфавита, то есть гласных и согласных
        букв конланга (например, если у Вас в согласных присутствует буква “m”, поставить в соответствие
        русскому знаку препинания “!” слово “MEOW” не выйдет). При совпадении гласных, согласных и знаков
        пунктуации новая информация не будет сохранена, а Вы увидите сообщение об ошибке.
        Не забывайте нажимать кнопку “Сохранить” для обновления информации о языке!
    </string>
    <string name="Head6">Немного лингвистики</string>
    <string name="Block6">
        1. Какие есть признаки\n
        У каждого слова есть постоянные и непостоянные признаки. Постоянные признаки сохраняются
        при изменении формы слова, непостоянные же, напротив, меняются и как раз отвечают за форму слова.
        Вот список признаков, с которым работает наше приложение:\n
        - Род\n
        - Число\n
        - Падеж\n
        - Время\n
        - Лицо\n
        - Наклонение\n
        - Вид\n
        - Залог\n
        - Степень сравнения\n
        2. Признаки у разных частей речи\n
        У каждой части речи есть свой набор постоянных и непостоянных признаков. Вот они:\n
        - Существительное\n
        Постоянные признаки: род\n
        Непостоянные признаки: число, падеж\n
        - Глагол\n
        Постоянные признаки: вид, залог\n
        Непостоянные признаки: время, число, род, лицо, наклонение\n
        - Прилагательное\n
        Постоянные признаки: -\n
        Непостоянные признаки: род, число, падеж, степень сравнения\n
        - Наречие\n
        Постоянные признаки: -\n
        Непостоянные признаки: степень сравнения\n
        - Причастие\n
        Постоянные признаки: вид, залог\n
        Непостоянные признаки: время, род, число, падеж\n
        - Деепричастие\n
        Постоянные признаки: вид\n
        Непостоянные признаки: -\n
        - Местоимения\n
        Постоянные признаки: род\n
        Непостоянные признаки: число, падеж\n
        - Числительные\n
        Постоянные признаки: -\n
        Непостоянные признаки: -\n
        - Предлоги и союзы\n
        Постоянные признаки: -\n
        Непостоянные признаки: -\n
        3. Грамматические правила и правила словообразования\n
        В чем разница? Грамматическое правило ставит слово в другую форму, то есть изменяет непостоянные
        признаки слова, а правило словообразования создает новое слово с другими постоянными признаками и,
        возможно, другой части речи.

    </string>
    <string name="Head7">Словарь</string>
    <string name="Block7">
        В словаре слова отображаются как “слово-перевод”, и на каждое из них можно нажать,
        чтобы перейти на страницу слова. Все слова находятся в инфинитиве, то есть в начальной форме,
        и изменять их непостоянные признаки нельзя, однако можно редактировать само слово, его перевод,
        часть речи и постоянные признаки.\n
        Не забывайте нажимать кнопку “Сохранить” для обновления информации о слове!\n
        1. Формы слова\n
        Для каждого слова показываются существующие формы этого слова.
        Они определяются автоматически по существующим в языке грамматическим правилам, их нельзя редактировать
        в самом словаре, однако Вы можете добавить нужное вам грамматическое правило в разделе Грамматики.\n
        2. Все слова, образованные от данного\n
        Для каждого слова можно посмотреть все слова, образованные от него с помощью имеющихся правил словообразования.
        Получившиеся слова не добавляются в словарь автоматически, но Вы можете, опираясь на описание примененного
        правила словообразования, ввести перевод какого-либо из полученных слов и потом добавить в словарь.\n
        3. Сортировка и фильтрация\n
        Изначально слова в словаре отсортированы по времени последнего изменения. Приложение также поддерживает
        сортировку словаря в алфавитном порядке по слову в конланге и по его переводу, а также фильтрацию по части речи.
    </string>
    <string name="Head8">Грамматика</string>
</resources>